<resources>
    <string name="app_name">Home bookkeeping</string>
    <string name="incomingMoney_text">income</string>
    <string name="costMoney_text">costs</string>
    <string name="allMoney_text">all</string>
    <string name="addNewMovingMoney_text">Add income/costs</string>
    <string name="addingNewMoneyMove_text">Adding</string>
    <string name="description_text">Description</string>
    <string name="description_editText">Add a description if necessary</string>
    <string name="enter_sum">Enter sum</string>
    <string name="reports_buttonText">reports</string>
    <string name="balance_text">balance</string>
    <string name="header_24_hour">last 24 hour</string>
    <string name="header_at_last_30_days">at last 30 days</string>
    <string name="header_beginning_month">beginning of the month</string>
    <string name="receipt_transactions">Receipt transactions</string>
    <string name="expenditure_operations">Expenditure operations</string>
    <string name="input_data_text">Input all data!</string>
    <string name="enter_you_money">Enter you money</string>
    <string name="start">Start</string>
    <string name="hello">Hello</string>
    <string name="update">Update</string>
    <string name="transaction">Transaction %1$s</string>
    <string name="remainder">Remainder %1$s</string>
    <string name="delete">Delete</string>
    <string name="deletion">Deletion</string>
    <string name="delete_and_recalculate">Delete and recalculate</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="desc" translatable="false">desc</string>
</resources>