<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style=""
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateMoneyMovingFragment">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normalMargin"
        android:gravity="center"
        android:text="@string/addingNewMoneyMove_text"
        android:textSize="@dimen/H1"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewHeader"
        tools:ignore="UselessParent"
        android:layout_margin="@dimen/doubleMargin">

        <RadioButton
            android:id="@+id/umm_income_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receipt_transactions"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />

        <RadioButton
            android:id="@+id/umm_costs_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expenditure_operations"
            app:layout_constraintStart_toEndOf="@+id/incomingMoney_radio"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_text"
        android:textSize="@dimen/H2"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        android:layout_margin="@dimen/doubleMargin" />

    <EditText
        android:id="@+id/umm_description_et"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/doubleMargin"
        android:gravity="start"
        android:hint="@string/description_editText"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/doubleMargin"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>

    <EditText
        android:id="@+id/umm_sum_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/doubleMargin"
        android:hint="@string/enter_sum"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/umm_description_et" />

    <Button
        android:id="@+id/umm_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/doubleMargin"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@+id/umm_sum_et" />


</androidx.constraintlayout.widget.ConstraintLayout>