<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewmoneyMovingActivity">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addingNewMoneyMove_text"
        android:textSize="@dimen/H1"
        android:textStyle="bold"
        android:layout_margin="@dimen/normalMargin"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/incomingMoney_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tripleMargin"
                android:layout_marginTop="@dimen/doubleMargin"
                android:layout_weight="1"
                android:text="@string/receipt_transactions"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="@id/linearLayout2" />

            <RadioButton
                android:id="@+id/costMoney_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/doubleMargin"
                android:layout_weight="1"
                android:text="@string/expenditure_operations"
                app:layout_constraintStart_toEndOf="@+id/incomingMoney_radio"
                app:layout_constraintTop_toTopOf="@id/linearLayout2" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_text"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/sum_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/doubleMargin"
        android:hint="@string/enter_sum"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        tools:layout_editor_absoluteX="16dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="@dimen/doubleMargin"
        android:gravity="start"
        android:hint="@string/description_editText"
        app:layout_constraintTop_toBottomOf="@+id/sum_et"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addingInBase_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normalMargin"
        android:text="@string/addingNewMoneyMove_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>